Project GlobalTech {
  database_type: 'SQL Server'
}

Table "regions" {
  "region_id" int [pk]
  "region_name" VARCHAR(50) [not null]
}

Table "countries" {
  "country_id" CHAR(2) [pk]
  "country_name" VARCHAR(40) [not null]
  "region_id" int
}

Table "locations" {
  "location_id" int [pk]
  "address" VARCHAR(255) [not null]
  "postal_code" VARCHAR(20)
  "city" VARCHAR(50)
  "state" VARCHAR(50)
  "country_id" CHAR(2)
}

Table "warehouses" {
  "warehouse_id" int [pk]
  "warehouse_name" VARCHAR(255)
  "location_id" int
}

Table "employees" {
  "employee_id" int [pk]
  "first_name" VARCHAR(255) [not null]
  "last_name" VARCHAR(255) [not null]
  "email" VARCHAR(255) [not null]
  "phone" VARCHAR(50) [not null]
  "hire_date" DATETIME [not null]
  "manager_id" int
  "job_title" VARCHAR(255) [not null]
  "corporate_id" int [not null]
}

Table "product_categories" {
  "category_id" int [pk]
  "category_name" VARCHAR(255) [not null]
}

Table "products" {
  "product_id" int [pk]
  "product_name" VARCHAR(255) [not null]
  "description" VARCHAR(2000)
  "standard_cost" DECIMAL(9,2)
  "list_price" DECIMAL(9,2)
  "category_id" int [not null]
}

Table "customers" {
  "customer_id" int [pk]
  "name" VARCHAR(255) [not null]
  "address" VARCHAR(255)
  "website" VARCHAR(255)
  "credit_limit" DECIMAL(8,2)
}

Table "contacts" {
  "contact_id" int [pk]
  "first_name" VARCHAR(255) [not null]
  "last_name" VARCHAR(255) [not null]
  "email" VARCHAR(255) [not null]
  "phone" VARCHAR(20)
  "customer_id" int
}

Table "orders" {
  "order_id" int [pk]
  "customer_id" INT [not null]
  "status" VARCHAR(20) [not null]
  "salesman_id" INT
  "order_date" DATETIME [not null]
  "shipped_date" DATETIME [not null]
  "canceled_date" DATETIME [not null]
  "limit_payment_date" DATETIME [not null]
}

Table "payment_methods" {
  "method_id" int [pk]
  "method" VARCHAR(20) [not null]
}

Table "payments" {
  "payment_id" int [pk]
  "order_id" int [not null]
  "method_id" int [not null]
  "payment_date" DATETIME [not null]
  "value" DECIMAL(8,2) [not null]
}

Table "order_items" {
  "order_id" int
  "item_id" BIGINT
  "product_id" int [not null]
  "quantity" DECIMAL(8,2) [not null]
  "unit_price" DECIMAL(8,2) [not null]

Indexes {
  (order_id, item_id) [pk]
}
}

Table "inventories" {
  "product_id" int
  "warehouse_id" int
  "quantity" INT [not null]

Indexes {
  (product_id, warehouse_id) [pk]
}
}


Ref: orders.order_id < payments.order_id 
Ref: payments.method_id > payment_methods.method_id

Ref "fk_countries_regions":"regions"."region_id" < "countries"."region_id" [delete: cascade]

Ref "fk_locations_countries":"countries"."country_id" < "locations"."country_id" [delete: cascade]

Ref "fk_warehouses_locations":"locations"."location_id" < "warehouses"."location_id" [delete: cascade]

Ref "fk_employees_manager":"employees"."employee_id" < "employees"."manager_id" [delete: no action]

Ref "fk_products_categories":"product_categories"."category_id" < "products"."category_id" [delete: cascade]

Ref "fk_contacts_customers":"customers"."customer_id" < "contacts"."customer_id" [delete: cascade]

Ref "fk_orders_customers":"customers"."customer_id" < "orders"."customer_id" [delete: cascade]

Ref "fk_orders_employees":"employees"."employee_id" < "orders"."salesman_id" [delete: set null]

Ref "fk_order_items_products":"products"."product_id" < "order_items"."product_id" [delete: cascade]

Ref "fk_order_items_orders":"orders"."order_id" < "order_items"."order_id" [delete: cascade]

Ref "fk_inventories_products":"products"."product_id" < "inventories"."product_id" [delete: cascade]

Ref "fk_inventories_warehouses":"warehouses"."warehouse_id" < "inventories"."warehouse_id" [delete: cascade]

